--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
       <div class="starter-template">
         <h1><a href="https://twitter.com/search?f=tweets&vertical=default&q=OviyaArmy">#OviyaArmy</a> European High Command</h1>
         <p class="lead">Neenga shutup pannunga!</p>
+        <div class="alert alert-danger">
+           <strong>Operation Sledgehammer!</strong>
       </div>
     </div><!-- /.container -->
 
