--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         <h1><a href="https://twitter.com/search?f=tweets&vertical=default&q=OviyaArmy">#OviyaArmy</a> European High Command</h1>
         <p class="lead">Neenga shutup pannunga!</p>
         <div class="alert alert-danger">
-           <strong>Operation Sledgehammer!</strong>
+           <strong>Operation Sledgehammer!</strong> <p> Do you hate living in a judgemental society? Do you hate heirarchy being shoved up on your throat? Here is your change to fight bigotry!
+             Defend one of your own from <strong>"Witless bullies and hapless punks"</strong></p>
       </div>
     </div><!-- /.container -->
 
