--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <h1><a href="https://twitter.com/search?f=tweets&vertical=default&q=OviyaArmy">#OviyaArmy</a> European High Command</h1>
         <p class="lead">Neenga shutup pannunga!</p>
         <div class="alert alert-danger">
-           <strong>Operation Sledgehammer!</strong> <p> Do you hate living in a judgemental society? Do you hate heirarchy being shoved up on your throat? Here is your change to fight bigotry!
-             Defend one of your own from <strong>"Witless bullies and hapless punks"</strong></p>
+           <strong>Operation Sledgehammer!</strong> <p> Do you despise living in a judgemental society? Do you hate heirarchy being shoved down on your throat? Here is your chance to fight against bigotry!
+             Defend one of our own from <strong>"witless bullies and hapless punks".</strong></p>
       </div>
     </div><!-- /.container -->
 
@@ -68,6 +68,11 @@
     <script src="bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="ie10-viewport-bug-workaround.js"></script>
-  </body>
+  <div id="footer">
+   <div class="container">
+    <p class="text-muted credit">Feel free to submit pull requests here <a href="https://github.com/boris-sathya/boris-sathya.github.io"</a></p>
+   </div>
+  </div>
+ </body>
 </html>
 
