--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <script src="ie10-viewport-bug-workaround.js"></script>
   <div id="footer">
    <div class="container">
-    <p class="text-muted credit">Feel free to submit pull requests here <a href="https://github.com/boris-sathya/boris-sathya.github.io"</a></p>
+    <p class="text-muted credit">Feel free to submit pull requests <a href="https://github.com/boris-sathya/boris-sathya.github.io">here</a></p>
    </div>
   </div>
  </body>
